<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:scrollIndicators="none|right"
    android:scrollbars="vertical"
    tools:context="edu.css.amanda.cis3334unit6asg_nicholsamanda.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:text="Favorite Contacts"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Contact: "
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cell: "
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    tools:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact1Num"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Choose a Quick Message: "
                    android:textAppearance="@android:style/TextAppearance.Material" />

                <Spinner
                    android:id="@+id/spinner1Messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/messages" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1Call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Call" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Contact: "
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact2"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cell: "
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    tools:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact2Num"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Choose a Quick Message: "
                    android:textAppearance="@android:style/TextAppearance.Material" />

                <Spinner
                    android:id="@+id/spinner2Messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/messages" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2Call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Call" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Contact: "
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact3"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cell: "
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    tools:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact3Num"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Choose a Quick Message: "
                    android:textAppearance="@android:style/TextAppearance.Material" />

                <Spinner
                    android:id="@+id/spinner3Messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/messages" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3Call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Call" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
